[project]
name = "grugstore"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "generativist", email = "jbn@abreka.com" }
]
requires-python = ">=3.12"
dependencies = [
    "base58>=2.1.1",
]

[project.scripts]
grugstore = "grugstore:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
]
