[project]
name = "grugstore"
version = "0.1.3"
description = "Simplest possible content-addressable file store for blobs."
readme = "README.md"
authors = [
    { name = "generativist", email = "jbn@abreka.com" }
]
requires-python = ">=3.10"
license = { text = "MIT" }
keywords = ["storage", "content-addressable", "blob", "file-store"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: System :: Filesystems",
]
dependencies = [
    "base58>=2.1.1",
]

[project.urls]
Homepage = "https://github.com/jbn/grugstore"
Repository = "https://github.com/jbn/grugstore"
"Bug Tracker" = "https://github.com/jbn/grugstore/issues"

[project.scripts]
grugstore = "grugstore:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "black>=25.1.0",
    "pytest>=8.4.1",
    "pytest-cov>=6.2.1",
    "ruff>=0.12.4",
    "ty>=0.0.1a15",
]
